// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Stack inital state shows the add button if an entry can be added 1`] = `
<DocumentFragment>
  <section
    aria-label="Notepad"
    class="root"
    id="search:search-stack"
  >
    <div
      aria-controls="search:search-stack"
      aria-expanded="false"
      aria-label="Open search session"
      role="button"
      tabindex="0"
    >
      <button
        class="btn btnPrimary btnSm button"
        title="Add search"
        type="button"
      >
        + 
        <svg
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
          />
        </svg>
         Search
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Search Stack inital state shows the top of the stack if entries exist 1`] = `
<DocumentFragment>
  <section
    aria-label="Notepad"
    class="root"
    id="search:search-stack"
  >
    <div
      aria-controls="search:search-stack"
      aria-expanded="false"
      aria-label="Open search session"
      role="button"
      tabindex="0"
    >
      <div
        class="entry"
      >
        <div
          class="d-flex"
        >
          <span
            class="flex-shrink-0 text-muted mr-1"
          >
            <svg
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z"
              />
            </svg>
          </span>
          <span
            class="flex-1"
          >
            <a
              class="anchorLink p-0"
              href="/test@master/-/blob/path/to/file"
            >
              <span
                title="path/to/file"
              >
                file
              </span>
            </a>
          </span>
          <span
            class="ml-1 d-flex"
          >
            <button
              aria-label="Add annotation"
              class="btn btnIcon text-muted"
              title="Add annotation"
              type="button"
            >
              <svg
                class="mdi-icon iconInline"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M14,17H7V15H14M17,13H7V11H17M17,9H7V7H17M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z"
                />
              </svg>
            </button>
            <button
              aria-label="Remove entry"
              class="btn btnIcon ml-1 text-muted"
              title="Remove entry"
              type="button"
            >
              <svg
                class="mdi-icon iconInline"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
